crates/ruff_linter/src/rules/flake8_builtins/snapshots/ruff_linter__rules__flake8_builtins__tests__A002_A002.py.snap
---
source: crates/ruff_linter/src/rules/flake8_builtins/mod.rs
---
A002 Function argument `str` is shadowing a Python builtin
 --> A002.py:1:11
  |
1 | def func1(str, /, type, *complex, Exception, **getattr):
  |           ^^^
2 |     pass

A002 Function argument `type` is shadowing a Python builtin
 --> A002.py:1:19
  |
1 | def func1(str, /, type, *complex, Exception, **getattr):
  |                   ^^^^
2 |     pass

A002 Function argument `complex` is shadowing a Python builtin
 --> A002.py:1:26
  |
1 | def func1(str, /, type, *complex, Exception, **getattr):
  |                          ^^^^^^^
2 |     pass

A002 Function argument `Exception` is shadowing a Python builtin
 --> A002.py:1:35
  |
1 | def func1(str, /, type, *complex, Exception, **getattr):
  |                                   ^^^^^^^^^
2 |     pass

A002 Function argument `getattr` is shadowing a Python builtin
 --> A002.py:1:48
  |
1 | def func1(str, /, type, *complex, Exception, **getattr):
  |                                                ^^^^^^^
2 |     pass

A002 Function argument `bytes` is shadowing a Python builtin
 --> A002.py:5:17
  |
5 | async def func2(bytes):
  |                 ^^^^^
6 |     pass

A002 Function argument `id` is shadowing a Python builtin
  --> A002.py:9:17
 9 | async def func3(id, dir):
   |                 ^^
10 |     pass

A002 Function argument `dir` is shadowing a Python builtin
  --> A002.py:9:21
 9 | async def func3(id, dir):
   |                     ^^^
10 |     pass
