crates/ruff_linter/src/rules/flake8_builtins/snapshots/ruff_linter__rules__flake8_builtins__tests__A004_A004.py.snap
---
source: crates/ruff_linter/src/rules/flake8_builtins/mod.rs
---
A004 Import `sum` is shadowing a Python builtin
 --> A004.py:1:16
  |
1 | import some as sum
  |                ^^^
2 | import float
3 | from some import other as int

A004 Import `float` is shadowing a Python builtin
 --> A004.py:2:8
  |
1 | import some as sum
2 | import float
  |        ^^^^^
3 | from some import other as int
4 | from some import input, exec

A004 Import `int` is shadowing a Python builtin
 --> A004.py:3:27
  |
1 | import some as sum
2 | import float
3 | from some import other as int
  |                           ^^^
4 | from some import input, exec
5 | from directory import new as dir

A004 Import `input` is shadowing a Python builtin
 --> A004.py:4:18
  |
2 | import float
3 | from some import other as int
4 | from some import input, exec
  |                  ^^^^^
5 | from directory import new as dir

A004 Import `exec` is shadowing a Python builtin
 --> A004.py:4:25
  |
2 | import float
3 | from some import other as int
4 | from some import input, exec
  |                         ^^^^
5 | from directory import new as dir

A004 Import `dir` is shadowing a Python builtin
 --> A004.py:5:30
  |
3 | from some import other as int
4 | from some import input, exec
5 | from directory import new as dir
  |                              ^^^
6 |
7 | # See: https://github.com/astral-sh/ruff/issues/13037

A004 Import `BaseExceptionGroup` is shadowing a Python builtin
  --> A004.py:11:32
10 | if sys.version_info < (3, 11):
11 |     from exceptiongroup import BaseExceptionGroup, ExceptionGroup
   |                                ^^^^^^^^^^^^^^^^^^

A004 Import `ExceptionGroup` is shadowing a Python builtin
  --> A004.py:11:52
10 | if sys.version_info < (3, 11):
11 |     from exceptiongroup import BaseExceptionGroup, ExceptionGroup
   |                                                    ^^^^^^^^^^^^^^
