crates/ruff_linter/src/rules/flake8_builtins/snapshots/ruff_linter__rules__flake8_builtins__tests__A006_A006.py_builtins_ignorelist.snap
---
source: crates/ruff_linter/src/rules/flake8_builtins/mod.rs
---
A006 Lambda argument `print` is shadowing a Python builtin
 --> A006.py:1:8
  |
1 | lambda print, copyright: print
  |        ^^^^^
2 | lambda x, float, y: x + y
3 | lambda min, max: min

A006 Lambda argument `copyright` is shadowing a Python builtin
 --> A006.py:1:15
  |
1 | lambda print, copyright: print
  |               ^^^^^^^^^
2 | lambda x, float, y: x + y
3 | lambda min, max: min

A006 Lambda argument `float` is shadowing a Python builtin
 --> A006.py:2:11
  |
1 | lambda print, copyright: print
2 | lambda x, float, y: x + y
  |           ^^^^^
3 | lambda min, max: min
4 | lambda id: id

A006 Lambda argument `min` is shadowing a Python builtin
 --> A006.py:3:8
  |
1 | lambda print, copyright: print
2 | lambda x, float, y: x + y
3 | lambda min, max: min
  |        ^^^
4 | lambda id: id
5 | lambda dir: dir

A006 Lambda argument `max` is shadowing a Python builtin
 --> A006.py:3:13
  |
1 | lambda print, copyright: print
2 | lambda x, float, y: x + y
3 | lambda min, max: min
  |             ^^^
4 | lambda id: id
5 | lambda dir: dir
